@@ -76,7 +76,7 @@ nat proto tcp from 127.0.0.5 to {{n.management_ip}} port 6379 -> {{node.manageme
 {% endif %}
 
 # Rsyslog forwarders
-{% for proto, ip, port, route_ipv4, route_ipv6 in node.get_forwarders_enabled %}
+{% for proto, ip, port, route_ipv4, route_ipv6 in forwarders_enabled %}
 {%- if route_ipv6 %}
 nat proto {{proto}} from fd00::204 to {{ip}} port {{port}} -> {{route_ipv6}}
 {%- endif %}
@@ -85,7 +85,7 @@ nat proto {{proto}} from 127.0.0.4 to {{ip}} port {{port}} -> {{route_ipv4}}
 {%- endif %}
 {% endfor %}
 # HAProxy backends
-{% for proto, ip, port, route_ipv4, route_ipv6 in node.get_backends_enabled %}
+{% for proto, ip, port, route_ipv4, route_ipv6 in backends_enabled %}
 {%- if route_ipv6 %}
 nat proto {{proto}} from { fd00::205, fd00::206, fd00::207 } to {{ip}} port {{port}} -> {{route_ipv6}}
 {%- endif %}
@@ -160,7 +160,7 @@ rdr log proto tcp from { {{global_config.pf_admin_restrict}} }  to {{ node.manag
 ###############################
 
 # Incoming redirection rules for Listeners
-{% for source,destination,port,nat_port,proto,family,max_src,max_rate in node.get_listeners_enabled -%}
+{% for source,destination,port,nat_port,proto,family,max_src,max_rate in listeners_enabled -%}
     {% if "tcp" in proto -%}
         rdr proto tcp from { {{source}} } to {{destination}} port {{port}} -> {{jail_addresses['haproxy'][family]}} port {{nat_port}}
     {% endif %}
@@ -269,7 +269,7 @@ pass quick proto tcp from {{n.management_ip}} to 127.0.0.7 port { 9000 }        
 #########################
 
 # Listeners configuration
-{% for source,destination,port,nat_port,proto,family,max_src,max_rate in node.get_listeners_enabled %}
+{% for source,destination,port,nat_port,proto,family,max_src,max_rate in listeners_enabled %}
     {%- if "tcp" in proto %}
 pass quick {{family}} proto tcp from { {{source}} } to {{jail_addresses['haproxy'][family]}} port {{nat_port}} keep state \
     {% if max_src != 0 or max_rate != 0 %}({% if max_src != 0 %}max-src-conn {{max_src}},{% endif %} {% if max_rate != 0 %}max-src-conn-rate {{max_rate}}/1,{% endif %} overload <vulture_blacklist> flush global){% endif %}
