@@ -6,6 +6,8 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 
 ## [Unreleased]
+### Fixed
+- [SERVICES] [PF] Configuration generation timeout due to expensive dynamic calls
 
 
 ## [2.34.4] - 2025-12-17
